--- a/css/main.css
+++ b/css/main.css
@@ -14,4 +14,31 @@ body > header {
   img {
     max-width: 35px;
   }
+  .search_field {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+
+    img {
+      width: 18px;
+    }
+    input {
+      border: none;
+      background-color: transparent;
+      border-bottom: 1px solid black;
+    }
+    input:focus {
+      border: none;
+      outline: none;
+      border-bottom: 1px solid black;
+    }
+  }
+
+  #login_btn,
+  #signup_btn {
+    background-color: blue;
+    border: none;
+    padding: 0.4rem 1.2rem;
+    text-decoration: none;
+  }
 }
