--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Inter;
 }
 
 :root {
@@ -10,6 +13,7 @@
   --second-accent-color: #1C98EB;
   --main-color:#F1F1F1;
 }
+
 
 
 /* HEADER */
@@ -55,6 +59,8 @@ body > header {
     border: none;
     padding: 0.4rem 1.2rem;
     text-decoration: none;
+    border-radius: 10rem;
+    color: var(--main-color);
   }
 }
 
