--- a/css/main.css
+++ b/css/main.css
@@ -137,14 +137,14 @@ body > footer {
 }
 
 .btn.primary {
-  background-color: #0062C4;
-  color: white;
+  background-color: var(--accent-color);
+  color: var(--main-color);
 }
 
 .btn.secondary {
   background-color: transparent;
-  color: white;
-  border: 2px solid white;
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
 }
 
 .btn:hover {
