--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -8,7 +8,7 @@ form {
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
-  div {
+  div:not(.names-container) {
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
@@ -18,5 +18,9 @@ form {
 
       padding: 0.3rem;
     }
+  }
+  .names-container {
+    display: flex;
+    gap: 0.5rem;
   }
 }
