--- a/css/cards.css
+++ b/css/cards.css
@@ -1,6 +1,6 @@
 .popular-books {
-    background-color: var(--secondary-color); /* Light gray background */
-    padding: 30px 15px; /* Spacing around the section */
+    background-color: var(--secondary-color); 
+    padding: 30px 15px;
 
   }
   
@@ -44,15 +44,15 @@
     display: block;
     position: absolute;
     inset: 0;
-    border: 2px solid rgba(255, 255, 255, 0.1); /* Subtle border effect */
-    border-radius: 8px; /* Same as card border-radius */
+    border: 2px solid rgba(255, 255, 255, 0.1); 
+    border-radius: 8px; 
     pointer-events: none;
 }
 
 .card:hover {
     transform: translateY(-5px); /* Lift the card slightly */
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Stronger shadow on hover */
-    background-color: var(--secondary-color); /* Ensure consistent color */
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    background-color: var(--secondary-color); 
 }
 
 
