--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,37 @@
   --main-color: #f1f1f1;
 }
 
+body:not(#home_page) main {
+  margin: 1rem;
+}
+
 /* HEADER */
+
+body#home_page > header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 5;
+  background-color: transparent;
+  label > svg {
+    fill: var(--main-color);
+  }
+  #search_form:has(input:focus) {
+    border: none;
+    border-bottom: 1px solid var(--main-color);
+  }
+  #search_form {
+    background-color: transparent;
+    border-radius: 0;
+    padding-inline: 0;
+    border-bottom: 1px solid var(--main-color);
+
+    input {
+      color: var(--main-color);
+    }
+  }
+}
 
 body {
   min-height: 100vh;
@@ -22,32 +52,52 @@ body {
   flex-direction: column;
 }
 body > header {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  width: 100%;
+  padding: 1.5rem 2rem;
   background-color: var(--secondary-color);
+  :first-child {
+    grid-column: 1/2;
+  }
+  :nth-child(2) {
+    grid-column: 2/3;
+    justify-self: center;
+    width: fit-content;
+  }
+  :last-child {
+    grid-column: 3/4;
+    justify-self: end;
+  }
   img {
     max-width: 45px;
   }
-  .search_field {
+
+  #search_form:has(input:focus) {
+    border: 1px solid var(--second-accent-color);
+  }
+  #search_form {
     display: flex;
     align-items: center;
-    gap: 0.2rem;
-    input#search_field {
-      color: var(--main-color);
-    }
-    img {
-      width: 14px;
+    gap: 0.5rem;
+    background-color: var(--main-color);
+    height: min-content;
+    border-radius: 25px;
+    padding-inline: 0.5rem;
+    label > svg {
+      fill: var(--secondary-color);
     }
     input {
       border: none;
+      padding: 0.5rem 0.2rem;
       background-color: transparent;
-      border-bottom: 1px solid var(--main-color);
+      color: var(--secondary-color);
+      font-size: 0.9rem;
     }
     input:focus {
       border: none;
       outline: none;
-      border-bottom: 1px solid var(--main-color);
     }
   }
 
@@ -93,4 +143,3 @@ body > footer {
     }
   }
 }
-
