--- a/css/results.css
+++ b/css/results.css
@@ -5,3 +5,8 @@ h1 {
 section#results .card:not(:last-child) {
   margin-bottom: 1rem;
 }
+
+.card a {
+  text-decoration: none;
+  color: var(--secondary-color);
+}
