--- a/css/cards.css
+++ b/css/cards.css
@@ -43,9 +43,7 @@
     content: "";
     display: block;
     position: absolute;
-    inset: 0;
-    border: 2px solid rgba(255, 255, 255, 0.1); 
-    border-radius: 8px; 
+    inset: 0; 
     pointer-events: none;
 }
 
@@ -107,8 +105,13 @@
 .card-footer {
     margin-top: auto;
     padding: 8px; 
-    background-color: #444; 
+    background-color: var(--second-accent-color); 
     font-size: 11px; 
     text-align: left; 
+    color: var(--main-color);
+}
+
+.card a {
+    text-decoration: none;
     color: var(--main-color);
 }
