--- a/css/main.css
+++ b/css/main.css
@@ -145,3 +145,9 @@ body > footer {
     }
   }
 }
+
+header a#logout_btn {
+  text-decoration: none;
+  color: var(--main-color);
+  margin-right: 1rem;
+}
