--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -1,10 +1,19 @@
 main {
-  min-height: 100vh;
-  display: grid;
-  place-content: center;
+  display: flex;
+  flex-direction: column;
+  section {
+    width: 100%;
+    max-width: 450px;
+    margin-top: 1rem;
+    margin-inline: auto;
+    h1 {
+      font-size: 2rem;
+    }
+  }
 }
 
 main form {
+  margin-top: 3rem;
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
@@ -19,8 +28,42 @@ main form {
       padding: 0.3rem;
     }
   }
+  button {
+    background-color: var(--accent-color);
+    border: none;
+    padding: 0.75rem;
+    border-radius: 25px;
+    cursor: pointer;
+    color: var(--main-color);
+    font-size: 1rem;
+    transition: 0.125s;
+  }
+  button:hover {
+    background-color: var(--second-accent-color);
+  }
+  button:focus {
+    outline: 2px solid var(--accent-color);
+    outline-offset: 2px;
+  }
+  button:focus:hover {
+    outline: solid 2px var(--second-accent-color);
+  }
+  .reminder {
+    font-size: 0.85rem;
+    a {
+      text-decoration: none;
+    }
+  }
   .names-container {
     display: flex;
     gap: 0.5rem;
+    div {
+      width: 50%;
+    }
   }
+}
+
+p.description {
+  max-width: 450px;
+  margin-top: 1rem;
 }
