--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@
   --second-accent-color: #1c98eb;
   --main-color: #f1f1f1;
   --faded-white: #caced1;
+  --main-grey: #333333;
+  --light-grey: #e9e9e9;
   --approved: #22c55e;
   --error: #ef4444;
 }
@@ -30,7 +32,7 @@ body a {
 }
 
 body:not(#home_page) main {
-  margin: 1rem;
+  margin: 2rem 1.5rem;
 }
 
 a {
@@ -52,6 +54,30 @@ body:has(dialog[open]) {
 .error {
   color: var(--error);
   font-size: 0.85rem;
+}
+
+/* General btn styling */
+
+.btn {
+  max-width: max-content;
+  padding: 0.9rem 1.25rem;
+  align-self: center;
+  border: none;
+  border-radius: 0.625rem;
+  background-color: var(--accent-color);
+  color: var(--main-color);
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: var(--second-accent-color);
+}
+
+button {
+  transition: 0.125s;
+}
+button:focus {
+  outline-offset: 0.1rem;
 }
 
 /* Header - Mobile First */
@@ -249,7 +275,7 @@ body > footer {
   padding: 1rem;
 }
 
-footer img {
+footer img.logo {
   max-width: 50px;
 }
 
@@ -263,8 +289,19 @@ footer .some_icons {
 }
 
 footer .some_icons img {
-  max-width: 35px;
+  max-width: 28px;
   aspect-ratio: 1;
+}
+
+@media (min-width: 576px) {
+  footer .some_icons img {
+    max-width: 32px;
+  }
+}
+@media (min-width: 756px) {
+  footer .some_icons img {
+    max-width: 35px;
+  }
 }
 
 /* Homepage specific styles */
