--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,7 +1,23 @@
-section.book_details_container {
-  margin-top: 1rem;
-  gap: 2rem;
+h1 {
+  margin-bottom: 2rem;
+}
+
+h2 {
+  margin-bottom: 0.25rem;
+}
+
+form#book_details {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.flex {
+  display: flex;
+}
+
+section.book_details_container {
+  margin-top: 2rem;
+  gap: 1rem;
   div.cover {
     aspect-ratio: 3/4;
     max-height: 200px;
@@ -13,7 +29,7 @@ section.book_details_container {
   }
 
   .details {
-    margin-top: 2rem;
+    margin-top: 0.5rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -27,6 +43,12 @@ section.book_details_container {
   #content {
     display: flex;
     flex-direction: column;
+  }
+  .publishing_information {
+    color: var(--main-grey);
+    font-size: 0.9rem;
+    display: flex;
+    gap: 0.25rem;
   }
 }
 
@@ -44,12 +66,12 @@ dialog.loan_history {
   border: none;
   padding: 2rem 2.5rem;
   max-height: 500px;
+  width: 100%;
+  max-width: 300px;
 
   /* Styling */
   background: white;
   border-radius: 0.75rem;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-
   /* Center the dialog */
   position: fixed;
   top: 50%;
@@ -66,6 +88,12 @@ dialog.loan_history {
   }
   a:hover {
     color: var(--second-accent-color);
+  }
+}
+
+@media (min-width: 756px) {
+  dialog.loan_history {
+    max-width: 350px;
   }
 }
 
@@ -101,10 +129,11 @@ dialog.loan_history {
 
 /* Dashboard forms */
 
-section > form {
+section form {
   margin-top: 2rem;
-  div:not(:last-child) {
-    margin-bottom: 0.8rem;
+
+  h3 {
+    margin-bottom: 1rem;
   }
 
   > div {
@@ -112,5 +141,148 @@ section > form {
     flex-direction: column;
     width: min-content;
     gap: 0.2rem;
+  }
+
+  input {
+    padding: 0.575rem 0.625rem;
+    border-radius: 0.625rem;
+    border: none;
+    background-color: var(--light-grey);
+    font-size: 0.9rem;
+  }
+}
+
+section#add_content form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+span.success {
+  display: block;
+  color: var(--approved);
+}
+
+span.error {
+  display: block;
+  color: var(--error);
+}
+
+.tab-container {
+  margin-top: 1rem;
+}
+
+.error-input {
+  border-color: var(--error);
+}
+
+.tab-buttons {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid var(--light-grey);
+  margin-bottom: 2rem;
+}
+
+.tab-button {
+  padding: 0.5rem 1rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: var(--text-color);
+  border-bottom: 2px solid transparent;
+  margin-bottom: -2px;
+  transition: all 0.2s ease;
+}
+
+.tab-button.active {
+  border-bottom: 2px solid var(--accent-color);
+  color: var(--accent-color);
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
+section#add_content {
+  margin-top: 4rem;
+}
+
+span.status {
+  max-width: 215px;
+}
+
+@media (min-width: 380px) {
+  section.book_details_container {
+    gap: 2rem;
+  }
+}
+
+@media (min-width: 656px) {
+  section.find_book {
+    display: flex;
+    gap: 2rem;
+
+    section:first-child > p {
+      max-width: 280px;
+    }
+  }
+  section.book_details_container {
+    margin: 0;
+  }
+  section#add_content {
+    margin-top: 6rem;
+  }
+  section.book_details_container div.cover {
+    max-height: 225px;
+  }
+  div.tab-buttons {
+    justify-content: center;
+    gap: 2rem;
+    border: none;
+  }
+  .tab-content.active {
+    display: flex;
+    justify-content: center;
+  }
+  .tab-content > form {
+    margin: 0;
+  }
+}
+
+@media (min-width: 976px) {
+  section#add_content h2 {
+    margin-bottom: 2rem;
+  }
+  div.tab-buttons {
+    display: none;
+  }
+  .tab-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  div.tab-content {
+    display: flex;
+    justify-content: center;
+    box-shadow: 1px 1px 3px var(--light-shadow);
+    padding: 1.5rem;
+    border-radius: 1rem;
+  }
+  form button[type="submit"] {
+    margin-top: auto;
+  }
+}
+
+@media (min-width: 1080px) {
+  div.tab-content {
+    padding: 2rem;
+  }
+  .tab-container {
+    justify-content: center;
+    gap: 4rem;
   }
 }
