--- a/css/cards.css
+++ b/css/cards.css
@@ -112,6 +112,13 @@ body main#discover {
     .books-grid {
       grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     }
+
+    #cards-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        width: 100%;
+      }
   }
 
   .card-author {
